# bmad-crewai

./: .gitignore  .pre-commit-config.yaml  BMAD-Framework-Process-Model.md  BMAD-Granular-Process-Model.md  LICENSE  Makefile  README.md  pyproject.toml  test_story_completion.py
.bmad-core/: install-manifest.yaml
.bmad-workflows/: artefact_test.json  branching_admin_test.json  branching_user_test.json  conditional_admin_test.json  dashboard_test.json  dynamic_agent_test.json  export_test.json  performance_test.json  recovery_test.json  smoke_test_workflow.json  state_recovery_test.json  visualization_test.json
docs/: architecture.md  brief.md  crewai-research-validation.md  mvp-architecture-simplification.md  prd.md  test-prd.md
docs/architecture/: bmad-integration-mvp-focus.md  component-architecture.md  core-architecture-principles.md  data-flow-architecture.md  deployment-architecture.md  high-level-architecture.md  index.md  integration-patterns.md  introduction.md  monitoring-and-observability.md  mvp-scope-boundaries.md  mvp-testing-approach.md  performance-optimization.md  post-refactoring-summary.md  quality-assurance-integration.md  security-considerations.md
docs/epics/: epic-1-foundation-core-infrastructure.md  epic-1-test-epic.md  epic-3-artefact-management-workflow-orchestration.md  epic-4-llm-assist-and-canonical-path-stability.md  epic-list.md
docs/prd/: bmad-framework-integration.md  checklist-results-report.md  conclusion.md  dependencies-prerequisites.md  epic-2-agent-coordination-quality-assurance.md  functional-requirements.md  gate-matrix.md  goals-and-background-context.md  implementation-plan.md  index.md  mvp-definition.md  next-steps.md  non-functional-requirements.md  out-of-scope.md  phase-2-enterprise-features-post-mvp.md  requirements-matrix.md  risk-assessment.md  success-metrics.md  technical-assumptions.md  technical-requirements.md  user-interface-design-goals.md  user-personas.md
docs/stories/: 1.0.project-setup-completion-verification.story.md  1.1.bmad-template-integration.story.md  1.1.test-story.story.md  1.2.crewai-orchestration-setup.story.md  1.3.artefact-output-structure.story.md  2.1.bmad-agent-registry.story.md  2.2.quality-gate-implementation.story.md  2.3.workflow-state-management.story.md  3.1.comprehensive-artefact-generation.story.md  3.2.advanced-workflow-orchestration.story.md  3.3.monitoring-and-analytics.story.md  3.4.cli-interface-implementation.story.md  3.5.path-alias-resolver.story.md  3.6.single-gate-decision-source.story.md  4.1.llm-assist-scaffolding-artefact-detection-fallback.story.md
reports/: ambiguous.csv  errors_fp.csv  ml_audit.md  ml_audit_narrative.md
src/bmad_crewai/: __init__.py  __main__.py  agent_registry.py  agent_wrappers.py  api_client.py  artefact_manager.py  artefact_writer.py  checklist_executor.py  cli.py  config.py  core.py  crewai_engine.py  development_tester.py  error_handler.py  exceptions.py  quality_gate_manager.py  simple_api.py  simple_cli.py  simple_config.py  template_manager.py  workflow_manager.py  workflow_state_manager.py  workflow_visualizer.py
tests/: test_template_loading.py
tests/integration/: test_advanced_workflow_integration.py  test_agent_coordination.py  test_analytics.py  test_artefact_generation.py  test_cli_workflow.py  test_gate_delegation_integration.py  test_workflow_state_management.py
tests/unit/: test_agent_registry.py  test_agent_wrappers.py  test_artefact_manager.py  test_artefact_writer.py  test_cli.py  test_conditional_workflow.py  test_crewai_engine.py  test_dynamic_agent_assignment.py  test_error_handler.py  test_gate_decision_authority_scaffold.py  test_ml_audit_metrics.py  test_monitoring.py  test_path_alias.py  test_quality_gate_manager.py  test_workflow_manager.py  test_workflow_state_manager.py  (+1 more)
(+65 files in other folders)
